tests/snapshots/snapshots__explain_tree_renders_hash_join_plan.snap
---
source: tests/snapshots.rs
assertion_line: 504
expression: dump(&buf)
---
 pgman │ test  connected · pg 16.0
 1 empty                                                                  ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────┐
│> (empty — press e to focus)                                                                      │
│     ┌ EXPLAIN plan — q / esc close ────────────────────────────────────────────────────────┐     │
│     │▼ Hash Join · 50.00ms · 4500 rows                                                     │     │
│     │    Hash Cond: (o.user_id = u.id)                                                     │     │
│     │  · Seq Scan on orders o · 30.00ms · ~10000 rows                                      │     │
└─────│  ▼ Hash · 5.00ms                                                                     │─────┘
┌ resu│    · Seq Scan on users u · 4.00ms                                                    │─────┐
│(no r│                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     └──────────────────────────────────────────────────────────────────────────────────────┘     │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   j/k navigate · enter expand/collapse · g/G top/bottom · q / esc close · F1 help
