tests/snapshots/snapshots__grid_with_a_cjk_column_gets_its_full_width.snap
---
source: tests/snapshots.rs
assertion_line: 192
expression: text
---
 pgman │ test  connected · pg 16.0
 1 empty                          ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────┐
│> (empty — press e to focus)                              │
└──────────────────────────────────────────────────────────┘
┌ result · 2 row(s) ───────────────────────────────────────┐
│id  名 前     city                                          │
│1   東 京 都   tokyo                                         │
│2   bob     leeds                                         │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 RO   q quit · ? help · e editor · S schema · F1 +8 more
