tests/snapshots/snapshots__grid_with_data_and_sort.snap
---
source: tests/snapshots.rs
expression: dump(&buf)
---
 pgman │ test  connected · pg 16.0
 1 empty             ] [ switch · ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────┐
│> (empty — press e to focus)                              │
└──────────────────────────────────────────────────────────┘
┌ result · 3 row(s) ───────────────────────────────────────┐
│id ▲  name                                                │
│1     alice                                               │
│2     bob                                                 │
│3     carol                                               │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 RO   q quit · ? help · e editor · S schema · F1 +9 more
