tests/snapshots/snapshots__grid_with_filter_active.snap
---
source: tests/snapshots.rs
assertion_line: 121
expression: dump(&buf)
---
 pgman │ test  connected · pg 16.0
┌ editor (e to focus) ─────────────────────────────────────┐
│> (empty — press e to focus)                              │
└──────────────────────────────────────────────────────────┘
┌ result · 2/3 row(s) (filtered) ──────────────────────────┐
│name                                                      │
│alice                                                     │
│carol                                                     │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 q quit · ? help · e editor · S schema · T slow · L sessions
