tests/snapshots/snapshots__grid_zoomed_80x24.snap
---
source: tests/snapshots.rs
expression: text
---
 pgman │ test  connected · pg 16.0
 1 SELECT id, name F…                    ] [ switch · ctrl-t new · ctrl-w close
┌ result · 2 row(s) · zoomed (z) ──────────────────────────────────────────────┐
│id  name                                                                      │
│1   alice                                                                     │
│2   bob                                                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   results zoomed · z restores the split
