tests/snapshots/snapshots__header_shows_update_badge_when_available.snap
---
source: tests/snapshots.rs
assertion_line: 113
expression: dump(&buf)
---
 pgman │ test  connected · pg 16.0  ⬆ 0.3.0
 1 empty                                              ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> (empty — press e to focus)                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ result ──────────────────────────────────────────────────────────────────────┐
│(no rows)                                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   q quit · ? help · e editor · S schema · W wizard · Q saved · F1 +6 more
