tests/snapshots/snapshots__history_search_in_progress.snap
---
source: tests/snapshots.rs
assertion_line: 155
expression: dump(&buf)
---
 pgman │ test  connected · pg 16.0
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> SELECT * FROM users                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌ result ──────────────────────────────────────────────────────────────────────┐
│(no rows)                                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 (reverse-i-search) 'sel'
