tests/snapshots/snapshots__landing_after_connect.snap
---
source: tests/snapshots.rs
assertion_line: 100
expression: dump(&buf)
---
 pgman │ test  connected · pg 16.0
 1 empty                                              ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> (empty — press e to focus)                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ start ───────────────────────────────────────────────────────────────────────┐
│ connected to test on localhost:5432 · pg 16.0 · RO                           │
│ databases  test 1.2 GB · analytics 300 MB                                    │
│                                                                              │
│   e   write a query                    S   schema browser                    │
│   Q   saved queries (0)                T   slow queries                      │
│   W   schema wizard                    L   sessions & locks                  │
│   F8  logs → SQL (paste a log first)   F4  JDBC tap                          │
│   ?   all keys                         ctrl-t  new tab                       │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   q quit · ? help · e editor · S schema · W wizard · Q saved · F1 +6 more
