tests/snapshots/snapshots__log_pick_at_a_short_terminal_still_shows_a_pick.snap
---
source: tests/snapshots.rs
expression: dumped
---
 pgman │ test  connected · pg 16.0
┌ editor (e to focus) ─────────────────────────────────────┐
│> (empty — press e to focus)                              │
└──────────────────────────────────────────────────────────┘
┌ result ──────────────────────────────────────────────────┐
│┌ log picks · 18/40 ─────────────────────────────────────┐│
││▶ [hibernate] select * from users where id = 17         ││
│└────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────┘
 RO   ↑↓ / j/k navigate · enter load · F1 +3 more
