tests/snapshots/snapshots__no_rows_after_empty_query_result.snap
---
source: tests/snapshots.rs
assertion_line: 129
expression: dump(&buf)
---
 pgman │ test  connected · pg 16.0
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> (empty — press e to focus)                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ result ──────────────────────────────────────────────────────────────────────┐
│(no rows)                                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   q quit · ? help · e editor · S schema · W wizard · Q saved · F1 +6 more
