tests/snapshots/snapshots__schema_browser_renders_focused_table_details.snap
---
source: tests/snapshots.rs
expression: dump(&buf)
---
 pgman │ test  connected · pg 16.0
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────┐
│> (empty — press e to focus)                                                                      │
│     ┌ schema browser — q / esc close ──────────────────────────────────────────────────────┐     │
│     │▶ audit  (1)                      public.users                                        │     │
│     │▼ public  (2)                                                                         │     │
│     │  ▶ orders  (0 col, 0 cons)       columns (3)                                         │     │
└─────│  ▶ users  (3 col, 1 cons)          · id                                              │─────┘
┌ resu│                                    · email                                           │─────┐
│(no r│                                    · active                                          │     │
│     │                                                                                      │     │
│     │                                  constraints (1)                                     │     │
│     │                                    · users_email_key                                 │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     └──────────────────────────────────────────────────────────────────────────────────────┘     │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   j/k navigate · enter expand · [ ] jump schema · + / − all · / filter · s SELECT · F1 +3 more
